--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
+  <!-- ======= Update image ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Pyae Phyo Kyaw</h1>
